--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <button class="calc-button cB-t1 numpad">9</button>
 
-      <button class="worded-button wB-t1 calc-text1-t1 delete">DEL</button>
+      <button class="worded-button wB-t1 delete">DEL</button>
 
       <button class="calc-button cB-t1 numpad">4</button>
 
@@ -96,7 +96,7 @@
 
       <button class="calc-button cB-t1 operator">x</button>
 
-      <button class="bottom worded-button wB-t1 calc-text1-t1 reset">RESET</button>
+      <button class="bottom worded-button wB-t1 reset">RESET</button>
 
       <button class="bottom worded-button equals e1">=</button>
 
