--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
 
     <!-- JAVASCRIPT -->
-    <script type="text/javascript" src="JS/calculator.js"></script>
-    <script type="text/javascript" src="JS/theme.js"></script>
+    <script src="JS/calculator.js"></script>
+    <script src="JS/theme.js"></script>
 
 </body>
 
